add go2rtc admin port to service
Fixes https://github.com/blakeblackshear/blakeshome-charts/issues/86#issuecomment-3124365428

--- a/charts/frigate/templates/service.yaml
+++ b/charts/frigate/templates/service.yaml
@@ -75,6 +75,10 @@ spec:
       port: 8555
       protocol: UDP
       targetPort: webrtc-udp
+    - name: go2rtc-admin
+      port: 1984
+      protocol: TCP
+      targetPort: webrtc-tcp
   selector:
     app.kubernetes.io/name: {{ include "frigate.name" . }}
     app.kubernetes.io/instance: {{ .Release.Name }}
