--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -5,8 +5,8 @@ on:
     branches:
       - master
     paths:
-      - 'charts/**'
-      - '!charts/**/README.md'
+      - "charts/**"
+      - "!charts/**/README.md"
 
 jobs:
   release:
@@ -30,6 +30,6 @@ jobs:
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.2.1
         with:
-          charts_repo_url: https://blakeblackshear.github.io/blakeshome-charts
+          charts_repo_url: https://kalbasit.github.io/blakeshome-charts
         env:
           CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
